# huffman-project

./: CMakeLists.txt  README.md  build.rar
doxygen/: Doxyfile
doxygen/html/: _dictionnary_test_8c.html  _dictionnary_test_8c.js  _dictionnary_test_8c__incl.dot  _dictionnary_test_8c_ae66f6b31b5ad750f1fe042a706a4e3d4_cgraph.dot  _dictionnary_test_8c_source.html  _element_8c.html  _element_8c.js  _element_8c__incl.dot  _element_8c_a6f2f749e6d12f0a8cee3ede9d0130ddc_cgraph.dot  _element_8c_a6f2f749e6d12f0a8cee3ede9d0130ddc_icgraph.dot  _element_8c_af124caf257f07aa22a54088de794936c_cgraph.dot  _element_8c_af124caf257f07aa22a54088de794936c_icgraph.dot  _element_8c_source.html  _element_8h.html  _element_8h.js  _element_8h__dep__incl.dot  _element_8h__incl.dot  _element_8h_a5980375cdc55472285042157be1d1416_icgraph.dot  _element_8h_a6f2f749e6d12f0a8cee3ede9d0130ddc_cgraph.dot  _element_8h_a6f2f749e6d12f0a8cee3ede9d0130ddc_icgraph.dot  _element_8h_source.html  _huffman_tree_8c.html  _huffman_tree_8c.js  _huffman_tree_8c__incl.dot  _huffman_tree_8c_a04fbc7a74f5946e0675c068e92b14927_cgraph.dot  _huffman_tree_8c_a04fbc7a74f5946e0675c068e92b14927_icgraph.dot  _huffman_tree_8c_a3cae54b040657bc4c982ebc421b7d424_cgraph.dot  _huffman_tree_8c_a3cae54b040657bc4c982ebc421b7d424_icgraph.dot  _huffman_tree_8c_a55092d7f9d798480bfaaa6794aaf27aa_icgraph.dot  _huffman_tree_8c_a779d56b3276d2ae6f888726c9431e737_cgraph.dot  _huffman_tree_8c_a9525c2722a97ca9acf3af8c18d8d54b1_cgraph.dot  _huffman_tree_8c_source.html  (+184 more)
source/: compression.c  compression.h  decompression.c  decompression.h  main.c
(+216 files in other folders)
